# simple-auth

./: Anchor.toml  package.json
migrations/: deploy.ts
programs/simple-auth/: Cargo.toml
programs/simple-auth/src/: error.rs  lib.rs  states.rs
programs/simple-auth/src/instructions/: authenticate.rs  deauthenticate.rs  initialize.rs  mod.rs
scripts/: mint-nft.ts
tests/: simple-auth.test.ts  utils.ts
